# mml_utils

./: .buildinfo  CHANGELOG.md  LICENSE  README.md  RELEASE.md  ROADMAP.md  afep.html  build_umls_for_ctakes.html  build_umls_for_mml.html  genindex.html  glossary.html  index.html  install_ctakes.html  install_metamaplite.html  install_mm.html  install_umls.html  objects.inv  pyproject.toml  requirements-docs.txt  requirements.txt  search.html  searchindex.js  troubleshooting.html  umls_license.html  using_mm.html  using_mml.html
.github/workflows/: default.yml
_sources/: build_umls_for_mml.md  build_umls_for_mml.md.txt  glossary.md.txt  index.md  index.md.txt  install_ctakes.md  install_metamaplite.md.txt  install_mm.md  install_umls.md.txt  troubleshooting.md  using_mm.md.txt  using_mml.md
_static/: documentation_options.js
doco/: afep.md  build_umls_for_ctakes.md  conf.py  glossary.md  index.md  install_metamaplite.md  install_mm.md  install_umls.md  run_livereload.py  umls_license.md  using_mm.md  using_mml.md
examples/complete/: README.md  corpus.csv  filelist.txt  include-cuis.txt
examples/complete/mmlout/: cuis_by_doc.json.csv  mml.json.csv  mml.mmi.csv  notes.json.csv
examples/complete/notes/: 1093837.json  1093837.mmi  1093837.txt  209784.json  209784.mmi  209784.txt  209785.json  209785.mmi  209785.txt  209788.json  209788.mmi  209788.txt  8823029.json  8823029.mmi  8823029.txt  8823030.json  8823030.mmi  8823030.txt
examples/ctakes/: README.md
examples/phenorm/: README.md
src/: build_filelists.py  copy_new_mml_directory.py  extract_mml_output.py  run_mml.py  run_mml_on_filelist.py
src/mml_utils/: __init__.py  datesuffix.py  db_utils.py  filelists.py  os_utils.py  run_ctakes.py  run_mml.py
src/mml_utils/compare/: compare.py  merger.py
src/mml_utils/config/: build_mm_script.py  parser.py  run_afep.py
src/mml_utils/ctakes/: clean.py
src/mml_utils/excel/: tables.py
src/mml_utils/extract/: utils.py
src/mml_utils/parse/: json.py  mmi.py  parser.py  target_cuis.py  xmi.py
src/mml_utils/phenorm/: afep.py  afep_summary.py  cui_expansion.py
src/mml_utils/review/: build_afep_excel.py  build_excel.py  build_freqs.py  extract_data.py
src/mml_utils/scripts/: build_afep_excel.py  build_frequency_tables.py  build_mm_script.py  build_mm_script_multi.py  check_mml_offsets.py  check_mml_progress.py  clean_files.py  compare_output_binary.py  compare_outputs.py  copy_new_mml_directory.py  corpus_to_ascii.py  extract_data_for_review.py  extract_mml.py  extract_mml_output.py  extract_text_to_files.py  remove_done_from_filelist.py  remove_non_xml_for_ctakes.py  run_afep.py  run_afep_multi.py  run_ctakes.py  run_interactive.py  run_mml.py  run_mml_on_filelist.py  sample_review_set.py  split_filelist.py  split_long_file.py
src/mml_utils/umls/: export_to_db.py  mdr.py  semantictype.py
tests/: conftest.py  test_complete_example.py  test_extract_data_for_review.py  test_extract_mml_output.py  test_json_format.py  test_mdr.py  test_metamap_out.py  test_mm_mmi.py  test_mmi_format.py  test_run_afep.py  test_text_from_data.py
tests/anaphylaxis/: anaphylaxis.mmi
tests/data/: corpus.csv  corpus.sas7bdat
tests/fever/: fever.cui.txt  fever.json  fever.mmi  fever.string.txt  fever.txt
tests/files/: file0.json
tests/short_fever/: fever.json  fever.txt
tests/umls/: MRCONSO.RRF  MRREL.RRF
