[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'mml_utils'
dynamic = ['version', 'description']
module = 'mml_utils'
authors = [
    { name = 'dcronkite', email = 'dcronkite+pypi@gmail.com' },
]
readme = 'README.md'
dependencies = [
    'click>=8.0.0',
    'loguru',
    'pydantic',
    'charset_normalizer',
    'pandas',
]
requires-python = '>=3.8'
keywords = ['nlp', 'information extraction', 'metamap', 'metamaplite', 'ctakes']
classifiers = [# https://pypi.org/classifiers/
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Text Processing :: Linguistic',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Healthcare Industry',
]

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-lazy-fixture',
]
doc = [
    'sphinx',
    'myst-parser',
    'sphinx-autodoc-typehints',
    'sphinx-book-theme',
]
excel = ['openpyxl']

[project.scripts]
mml-clean = "mml_utils.scripts.clean_files:clean_files_cmd"
mml-run-filelist = "mml_utils.scripts.run_mml_on_filelist:run_single_mml_filelist"
mml-copy-notes = "mml_utils.scripts.copy_new_mml_directory:copy_to_new_mml_directory"
mml-build-filelists = "mml_utils.scripts.build_filelists:run"
mml-run-filelists-dir = "mml_utils.scripts.run_mml:run_mml_filelists_in_dir"
mml-extract-mml = "mml_utils.scripts.extract_mml_output:_extract_mml"
mml-compare-extracts = "mml_utils.scripts.compare_output_binary:compare_output_binary"
mml-check-progress = "mml_utils.scripts.check_mml_progress:check_mml_progress_repeat"
mml-split-filelist = "mml_utils.scripts.split_filelist:split_filelist"
mml-split-files = "mml_utils.scripts.split_long_file:split_files_on_lines"
mml-run-afep = "mml_utils.scripts.run_afep:_run_afep_algorithm"
mml-summarize-afep = "mml_utils.scripts.build_afep_excel:_build_afep_excel"
mml-run-afep-multi = "mml_utils.scripts.run_afep_multi:_run_afep_algorithm_multi"
mml-check-offsets = "mml_utils.scripts.check_mml_offsets:check_mml_offsets"
mml-prepare-review = "mml_utils.scripts.extract_data_for_review:_extract_data_for_review"
mml-prepare-review-sample = "mml_utils.scripts.sample_review_set:_compile_to_excel"
mml-sql-to-txt = "mml_utils.scripts.extract_text_to_files:text_from_database_cmd"
mml-csv-to-txt = "mml_utils.scripts.extract_text_to_files:text_from_csv_cmd"
mml-sas-to-txt = "mml_utils.scripts.extract_text_to_files:text_from_sas7bdat_cmd"
mml-jsonl-to-txt = "mml_utils.scripts.extract_text_to_files:text_from_jsonl_cmd"
mml-run-ctakes = "mml_utils.scripts.run_ctakes:run_ctakes_directory"
mml-build-freqs = "mml_utils.scripts.build_frequency_tables:_build_frequency_tables"
mml-build-mmscript-multi = "mml_utils.scripts.build_mm_script_multi:_run_build_mm_multi"
mml-build-mmscript = "mml_utils.scripts.build_mm_script:_build_mm_script"
mml-compare = "mml_utils.scripts.compare_outputs:_run_compare_outputs"

[project.urls]
Home = 'https://github.com/kpwhri/mml_utils'
Documentation = 'https://kpwhri.github.io/mml_utils/'
Changelog = 'https://github.com/kpwhri/mml_utils/blob/master/CHANGELOG.md'
